--- a/themes/theme1/report.twig
+++ b/themes/theme1/report.twig
@@ -59,11 +59,11 @@
             </div>
         </div>
     </div>
-    <div class="main" role="main">
-        <div class="container">
-            {{ content }}
-        </div>
-    </div>
+ <div class="main" role="main">
+     <div class="landingpage">
+      {{ content }}
+     </div>
+  </div>
     <div class="footer">
         <div class="container">
             <div class="social">
