--- a/themes/theme1/scss/old.css
+++ b/themes/theme1/scss/old.css
@@ -10,7 +10,7 @@
 }
 
 .hidden {
-    display: none important;
+    display: none !important;
 }
 
 .sr-only {
@@ -25,34 +25,37 @@
 }
 
 .slide {
-    overflow-y: hidden important;
-    transition: height 0.5s ease-in important;
+    overflow-y: hidden !important;
+    transition: height 0.5s ease-in !important;
 }
 
 /*** BASIC LAYOUT ***/
 
 html, body {
     height: 100%;
+    z-index: 0;
 }
 
 body {
     display: flex;
     flex-direction: column;
-    background-color: rgba(10, 10, 10, 0.3);
 }
 
 .main {
     flex: 1 0 auto;
+    background-color: rgba(10, 10, 10, 0.3);
+    z-index: 1;
 }
 
 .header, .footer {
     flex: 0 0 auto;
+    z-index: 2;
 }
 
 
 .main {
     padding: 5em 0 4em;
-    min-height: 650px;
+    min-height: 950px;
 }
 
 .container {
@@ -74,7 +77,6 @@ body {
 }
 
 /*** BASIC LAYOUT: HEADER ***/
-
 
 .title, .logo {
     padding: 0;
@@ -119,12 +121,6 @@ img {
 }
 
 .tagline {
-    position: absolute;
-    left: 50%;
-    right: 50%;
-    top: 30%;
-    bottom: 70%;
-    width: 300px;
     display: none;
 }
 
@@ -174,7 +170,8 @@ img {
 }
 
 .flash-img {
-    height: 100%;
+    height: 90px;
+    width: 100%;
 }
 
 
@@ -214,8 +211,8 @@ img {
         padding: 2em 1.5em 2em 0;
     }
     .logo {
-        height: 400px;
-        width: 150px;
+        height: 30%;
+        width: 60%;
     }
     .nav {
         clear: both;
@@ -227,7 +224,8 @@ img {
     .nav ul li {
         display: block;
         margin-left: 0;
-        text-align: center;
+        margin-right: 2em;
+        text-align: right;
     }
     .nav ul li a {
         display: block;
@@ -240,11 +238,11 @@ img {
         margin: 0.6667em 0;
         font-size: 1.5rem;
         line-height: 2em;
-        text-align: center;
+        text-align: right;
         cursor: pointer;
     }
     .js .nav-toggle>* {
-        vertical-align: middle;
+        vertical-align: right;
     }
     .footer p {
         padding: 1em 0;
@@ -281,7 +279,7 @@ p, hr, table, .table-responsive, ol, ul, dl, dd, pre, blockquote, fieldset {
 }
 
 a {
-    color: #2eae9b;
+    color: rgb(27, 163, 168);
     text-decoration: none;
     transition: color 0.2s ease-in;
 }
@@ -591,4 +589,31 @@ fieldset label:last-child, fieldset input:last-child, fieldset button:last-child
 input::-moz-focus-inner, button::-moz-focus-inner {
     border: 0;
     padding: 0;
+}
+
+html {
+  background-color: white;
+  z-index: 0;
+}
+
+* {
+  font-family: "Barlow Condensed", sans-serif;
+}
+
+h1, h2, h3 {
+  font-family: "Open Sans Condensed", sans-serif;
+}
+
+.header {
+  background: #707070;
+  height: 250px;
+}
+
+.idaImg {
+  width: 98px;
+  height: 268px;
+  float: right;
+  margin-top: 65px;
+  padding-left: 15px;
+  padding-bottom: 10px;
 }
