kmom03 och kmom04

--- a/themes/theme1/index.twig
+++ b/themes/theme1/index.twig
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="{{ theme_url }}/../shared/img/favicon.ico">
     <title>{% if meta.title %}{{ meta.title }} | {% endif %}{{ site_title }}</title>
+    {% if config.session.theme == "dark" %}
+    <link rel="stylesheet" href="{{ theme_url }}/css/style-dark.css" type="text/css" />
+    {% else %}
+    <link rel="stylesheet" href="{{ theme_url }}/css/style.css" type="text/css" />
+    {% endif %}
 
     {% if meta.description %}
         <meta name="description" content="{{ meta.description|striptags }}" />
@@ -19,7 +24,6 @@
 
     {# <link rel="stylesheet" href="{{ theme_url }}/../shared//css/dorid-sans.css" type="text/css" /> #}
     <!-- End -->
-    <link rel="stylesheet" href="{{ theme_url }}/css/style.css" type="text/css" />
 
 </head>
 <!-- "Widescreen-mode" can be activated in portfolio/config/config.yml -->
@@ -60,6 +64,7 @@
         </div>
     </div>
     <div class="main" role="main">
+        <!--{{dump (config.session)}}-->
         <div class="container">
             {{ content }}
         </div>
