--- a/themes/theme1/scss/report.scss
+++ b/themes/theme1/scss/report.scss
@@ -50,4 +50,8 @@
         grid-column: span 1;
         align-self: start;
     }
+    .landingpage {
+        padding: 1em;
+        margin: 1em;
+    }
 }
