--- a/themes/theme1/css/style-dark.css
+++ b/themes/theme1/css/style-dark.css
@@ -7465,63 +7465,10 @@ h1, h2, h3 {
     margin: 1em;
   }
 }
-.active {
-  text-decoration: underline;
-  color: #0c7177;
+.main {
+  background-color: black;
 }
 
-.kmomPage {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  padding-left: 16em;
-  padding-right: 16em;
-}
-
-.kmomPage h2 {
-  grid-column: span 4;
-  justify-self: center;
-}
-
-.leftMenue {
-  background-color: rgba(10, 10, 10, 0.3);
-  margin: 1em;
-  min-width: 75px;
-}
-
-.rightText {
-  margin: 1em;
-}
-
-@media (max-width: 767px) {
-  .leftMenue {
-    display: none;
-    min-width: 0;
-  }
-
-  .rightText {
-    min-width: 300px;
-  }
-}
-html {
-  background-color: #fafafa;
-}
-
-* {
-  font-family: "Barlow Condensed", sans-serif;
-}
-
-h1,
-h2,
-h3 {
-  font-family: "Open Sans Condensed", sans-serif;
-}
-
-.idaimg {
-  width: 98px;
-  height: 268px;
-  float: right;
-  margin-top: 65px;
-  padding-left: 15px;
-  padding-bottom: 10px;
+.header {
+  background-color: black;
 }
