--- a/themes/theme1/kmom.twig
+++ b/themes/theme1/kmom.twig
@@ -64,8 +64,8 @@
         </div>
     </div>
  <div class="main" role="main">
-     <div class="landingpage">
-      {{ content }}
+     <div class="kmomPage">
+            {{ content }}
      </div>
   </div>
     <div class="footer">
