--- a/themes/theme1/scss/style-dark.scss
+++ b/themes/theme1/scss/style-dark.scss
@@ -11,8 +11,10 @@ $fa-font-path: '../../shared/fontawesome/webfonts';
 
 .main {
     background-color: black;
+    color: #707070;
 }
 
 .header {
     background-color: black;
+    color: #707070;
 }
