--- a/themes/theme1/css/style.css
+++ b/themes/theme1/css/style.css
@@ -7440,7 +7440,7 @@ h1, h2, h3 {
   grid-column: span 1;
   border: 1px solid rgba(0, 0, 0, 0.3);
   border-radius: 5px;
-  box-shadow: 3px 3px;
+  box-shadow: 3px 3px rgba(0, 0, 0, 0.7);
   background-color: rgba(10, 10, 10, 0.3);
   align-self: center;
   text-indent: 1em;
@@ -7524,4 +7524,9 @@ h3 {
   margin-top: 65px;
   padding-left: 15px;
   padding-bottom: 10px;
+}
+
+.analysisImg {
+  width: 380px;
+  height: 300px;
 }
