--- a/themes/theme1/scss/report.scss
+++ b/themes/theme1/scss/report.scss
@@ -29,7 +29,7 @@
     grid-column: span 1;
     border: 1px solid rgba(0, 0, 0, 0.3);
     border-radius: 5px;
-    box-shadow: 3px 3px;
+    box-shadow: 3px 3px rgba(0, 0, 0, 0.7);
     background-color: rgba(10, 10, 10, 0.3);
     align-self: center;
     text-indent: 1em;
