--- a/themes/theme1/kmom.twig
+++ b/themes/theme1/kmom.twig
@@ -64,7 +64,7 @@
         </div>
     </div>
  <div class="main" role="main">
-     <div class="kmomPage">
+     <div class="kmompage">
             {{ content }}
      </div>
   </div>
