--- a/themes/theme1/scss/style-dark.scss
+++ b/themes/theme1/scss/style-dark.scss
@@ -10,11 +10,11 @@ $fa-font-path: '../../shared/fontawesome/webfonts';
 @import 'report';
 
 .main {
-    background-color: black;
+    background-color: rgb(1, 1, 1);
     color: #707070;
 }
 
 .header {
-    background-color: black;
+    background-color: rgb(1, 1, 1);
     color: #707070;
 }
