--- a/themes/theme1/scss/style.scss
+++ b/themes/theme1/scss/style.scss
@@ -39,7 +39,7 @@ h3 {
     padding-bottom: 10px;
 }
 
-.analysisImg {
-    width: 380px;
-    height: 300px;
+.analysisimg {
+    width: 220px;
+    height: 150px;
 }
