--- a/themes/theme1/scss/style.scss
+++ b/themes/theme1/scss/style.scss
@@ -43,3 +43,21 @@ h3 {
     width: 220px;
     height: 150px;
 }
+
+.embed-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    height: 0;
+    overflow: hidden;
+    max-width: 100%;
+}
+
+.embed-container iframe,
+.embed-container object,
+.embed-container embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
