--- a/themes/theme1/scss/style.scss
+++ b/themes/theme1/scss/style.scss
@@ -61,3 +61,13 @@ h3 {
     width: 100%;
     height: 100%;
 }
+
+.active {
+    text-decoration: underline;
+    color: rgb(236, 155, 23);
+    text-shadow: 1px;
+}
+
+.a {
+    color: rgb(236, 175, 43);
+}
