--- a/themes/theme1/gallery.twig
+++ b/themes/theme1/gallery.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="no-js">
+<html lang="sv" class="no-js">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -36,9 +36,7 @@
             </a>
             {% if pages["_meta"].meta.logo %}
                 <div class="logo" aria-hidden="true">
-                    <a href="{{ "index"|link }}">
                         <img src="{{ base_url }}/{{ pages["_meta"].meta.logo|url }}" alt="" />
-                    </a>
                 </div>
             {% endif %}
             <div class="title" {{ pages["_meta"].meta.tagline ? ' class="tagline"' }}>
@@ -59,7 +57,7 @@
                 </div>
             </div>
             <div class="flash-region">
-              <img class="flash-img" src="{{ base_url }}/image/ice.png?sc=banner1&a=40,0,0,0">
+              <img class="flash-img" src="{{ base_url }}/image/ice.png?sc=banner1&a=40,0,0,0" alt= "bild på is">
             </div>
         </div>
     </div>
