--- a/themes/theme1/scss/style-dark.scss
+++ b/themes/theme1/scss/style-dark.scss
@@ -11,10 +11,15 @@ $fa-font-path: '../../shared/fontawesome/webfonts';
 
 .main {
     background-color: rgb(1, 1, 1);
-    color: #707070;
+    color: rgb(170, 170, 170);
+}
+
+.h2 {
+    color: rgb(170, 170, 170);
+    font-weight: bold;
 }
 
 .header {
     background-color: rgb(1, 1, 1);
-    color: #707070;
+    color: rgb(170, 170, 170);
 }
