--- a/themes/theme1/gallery.twig
+++ b/themes/theme1/gallery.twig
@@ -30,13 +30,13 @@
 <body{% if config.theme_config.widescreen %} class="widescreen"{% endif %}>
     <div class="header" role="banner">
         <div class="container">
-            <a class="nav-toggle" id="nav-toggle" title="Toggle Menu" role="button" aria-controls="nav" aria-expanded="false" tabindex="1">
+            <a class="nav-toggle" id="nav-toggle" title="Toggle Menu" role="button" aria-controls="nav" aria-expanded="false" tabindex="-1">
                 <i class="fa fa-bars" aria-hidden="true" id="toggler"></i>
                 <span class="sr-only">Toggle Menu</span>
             </a>
             {% if pages["_meta"].meta.logo %}
                 <div class="logo" aria-hidden="true">
-                        <img src="{{ base_url }}/{{ pages["_meta"].meta.logo|url }}" alt="" />
+                    <img src="{{ base_url }}/{{ pages["_meta"].meta.logo|url }}" alt=""/>
                 </div>
             {% endif %}
             <div class="title" {{ pages["_meta"].meta.tagline ? ' class="tagline"' }}>
@@ -67,12 +67,13 @@
                 <h1>Gallery</h1>
                 {% for image in meta.images %}
                 <div class="imagegallery">
+            <a href="{{ base_url }}/image/gallery/{{image.url}}">
                 <picture>
                     <source media="(min-width: 668px)" srcset="{{ base_url }}/image/gallery/{{image.url}}?crop-to-fit&aspect-ratio=1:1">
                     <source media="(min-width: 376px)" srcset="{{ base_url }}/image/gallery/{{image.url}}?crop-to-fit&aspect-ratio=1:1&w=667">
                     <img src="{{ base_url }}/image/gallery/{{image.url}}?crop-to-fit&aspect-ratio=1:1&w=375 class="max-width" alt="{{image.alt}}">
                 </picture>
-                    <!--  <img src="{{ base_url }}/image/gallery/{{image.url}}?crop-to-fit&aspect-ratio=1:1" alt="{{image.alt}}"> -->
+            </a>
                 </div>
                 {% endfor %}
             </div>
